--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <h1>SContact<h1>
 <h2>Скоро обнова!.....<h2>
 <img src="post1.png">
-<h2>Лайков: 0<h2>
+<button>Лайков 0</button>
 <button>Поделиться</button>
+<button>Скачать изображение</button>
+<a href="https://spuikof.github.io/snetwork</a>
