--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <button>Лайков 0</button>
 <button>Поделиться</button>
 <button>Скачать изображение</button>
-<a href="https://spuikof.github.io/snetwork"</a>
+<a href="https://spuikof.github.io/snetwork">Назад</a>
