--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <body text="green" bgcolor="black">
+<a href="https://spuikof.github.io/networknews/">Новости</a>
 <hr>
 <h1>SContact<h1>
 <h2>Скоро обнова!.....<h2>
